@@ -1,5 +1,14 @@
 2008-12-09  Dan Williams  <dcbw@redhat.com>
 
+	* src/connection-editor/ip4-routes-dialog.c
+		- (ip4_routes_dialog_new, ip4_routes_dialog_update_setting): get and
+			set never-default accordingly
+
+	* src/connection-editor/ce-page-ip4.glade
+		- Add never-default checkbox to the IP4 routes dialog
+
+2008-12-09  Dan Williams  <dcbw@redhat.com>
+
 	* src/connection-editor/main.c
 		- (impl_start): bring connection editor window to front when it's
 			launched again, if it's already started
